<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/silahkan_booking"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="40sp"
        tools:ignore="HardcodedText" />


    <RadioGroup
        android:id="@+id/radio_grup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <RadioButton
            android:id="@+id/radio_button_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jakarta"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_button_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bandung"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_button_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surabaya"
            android:layout_marginBottom="0dp"
            android:textSize="15sp"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/kelas"
        android:textStyle="bold"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radio_grup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ekonomi"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bisnis"
            android:textSize="15sp"/>

        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eksekutiv"
            android:layout_marginBottom="0dp"
            android:textSize="15sp"/>

    </RadioGroup>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#000"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="10dp"
        tools:layout_editor_absoluteX="290dp"
        tools:layout_editor_absoluteY="550dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:text="@string/made_by_raihan_nadhif" />

</LinearLayout>