<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kereta_api"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="52dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/argo_mulyo"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="118dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            tools:ignore="HardcodedText,LabelFor"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="480dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@string/phone"
            tools:ignore="HardcodedText,LabelFor"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="550dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/e_mail"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="550dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/go"
            tools:layout_editor_absoluteX="290dp"
            tools:layout_editor_absoluteY="550dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/made_by_raihan_nadhif" />

    </LinearLayout>

</RelativeLayout>